--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,18 @@
 spring.application.name=fintracker
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.format_sql=true
-
-spring.datasource.url=jdbc:mysql://localhost:3306/fintracker
-spring.datasource.username=root
-spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/fintracker
+#spring.datasource.username=root
+#spring.datasource.password=password
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:postgresql://modestly-resounding-piglet.data-1.use1.tembo.io:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=zGEa56zDQYebjpOm
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 server.servlet.session.timeout=60m
 
